[package]
name = "moth-wasm-macros"
description = "Macro definitions for webassembly moth web services"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0", features = [ "full", "extra-traits" ] }
quote = "1.0"
