[package]
name = "moth-wasm"
description = "ABI definitions for webassembly moth web services"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lib]
path = "lib.rs"

[dependencies]
lmfu = "1.3.0"
moth-wasm-macros = { version = "1.0.0", path = "../moth-wasm-macros" }